--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+dotenv = { version = "0.15.0" }
 rocket = { version = "0.5.1", features = ["json"] }
 reqwest = { version = "0.12.4", features = ["json"] }
 
