--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,20 @@ edition = "2021"
 
 [dependencies]
 dotenv = { version = "0.15.0" }
-rocket = { version = "0.5.1", features = ["json"] }
+rocket = { version = "0.5.0", features = ["json"] }
 reqwest = { version = "0.12.4", features = ["json"] }
+mongodb = { version = "2.8.2", default-features = false, features = [
+    "async-std-runtime",
+] }
+okapi = { version = "0.7.0" }
+rocket_okapi = { version = "0.8.0", features = ["swagger"] }
+rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", branch = "master" }
+base64 = "0.22.1"
+regex = "1.10.4"
+schemars = "0.8.21"
+bcrypt = "0.15.1"
+chrono = "0.4.38"
+jsonwebtoken = "9.3.0"
 
 [dev-dependencies]
 rand = { version = "0.8.5" }
