--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ schemars = "0.8.21"
 bcrypt = "0.15.1"
 chrono = "0.4.38"
 jsonwebtoken = "9.3.0"
+lazy_static = "1.4"
 
 [dev-dependencies]
 rand = { version = "0.8.5" }
